<resources>
    <string name="app_name">CookBook</string>
    <string name="loading">Загрузка...</string>

    <string name="welcomeScreen">Вход в аккаунт</string>
    <string name="fullName">ФИО</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="helloNewPeople">Введите данные нового пользователя</string>
    <string name="logOut"><u>Выйти</u></string>
    <string name="signIn">Войти</string>
    <string name="signUpGo"><u>Еще не зарегистрированы?</u></string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="signInGo"><u>Уже зарегистрированы?</u></string>

    <string name="myRecipes">Мои рецепты</string>
    <string name="addRecipe">Добавить рецепт</string>
    <string name="moreRecipes">Больше рецептов</string>

    <string name="nameRecipe"><u>Название</u></string>
    <string name="write">Записать рецепт</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="description">Описание приготовления</string>
    <string name="category">Категория</string>

    <string-array name="category">
        <item>Первое</item>
        <item>Второе</item>
        <item>Гарнир</item>
        <item>Десерт</item>
        <item>Другое</item>
    </string-array>

    <string-array name="choice">
        <item>Все</item>
        <item>Выбранная категория</item>
        <item>Избранное</item>
        <item>Только положительный рейтинг</item>
    </string-array>

    <string name="noRecipes">У вас еще нет своих рецептов</string>
    <string name="newRecipe">Создайте свой первый рецепт</string>
    <string name="change">Изменить рецепт</string>
    <string name="recipes">Рецепты</string>

</resources>
