<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:background="@color/orange">

        <Button
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logOut"
            android:textSize="17sp"
            style="@style/textStyle"
            android:background="#00FFFFFF"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:paddingTop="12dp"
            android:layout_height="49dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:text="@string/loading"
            android:textSize="20sp"
            style="@style/textStyle"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/chiken"
            />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/textStyleTitle"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="160dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/myRecipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myRecipes"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="50dp"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:background="@drawable/shape_button"
        android:padding="20dp"
        style="@style/textStyle"
        >
    </Button>

    <Button
        android:id="@+id/addRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addRecipe"
        android:layout_marginHorizontal="50dp"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:background="@drawable/shape_button"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        style="@style/textStyle"
        >
    </Button>

    <Button
        android:id="@+id/moreRecipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moreRecipes"
        android:layout_marginHorizontal="50dp"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:background="@drawable/shape_button"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        style="@style/textStyle"
        >
    </Button>

</LinearLayout>