<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyRecipesActivity"
    android:background="@drawable/background8"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/arrow_back"
        />

    <TextView
        android:id="@+id/title"
        android:text="@string/myRecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyleTitle"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/noRecipes"
        android:text="@string/noRecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyleTitle"
        android:gravity="center"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/newRecipe"
        android:text="@string/newRecipe"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="30dp"
        android:background="@drawable/shape_button"
        android:paddingVertical="10dp"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="40dp"
        tools:listitem="@layout/list_item"
        android:dividerHeight="15.0sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="30dp"
        >
    </ListView>

</LinearLayout>