<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/background8">

    <Button
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/arrow_back"
        />

    <EditText
        android:id="@+id/titleText"
        style="@style/textStyleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nameRecipe"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        />

    <EditText
        android:id="@+id/ingredients"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/transparent"
        android:textSize="27sp"
        android:hint="@string/ingredients"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:lines="8"
        android:maxLines="10"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"/>


    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/transparent"
        android:textSize="27sp"
        android:hint="@string/description"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:lines="8"
        android:maxLines="10"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        android:entries="@array/category"
        android:paddingHorizontal="15dp"
        style="@style/textStyle"
        app:layout_constraintTop_toBottomOf="@+id/description"
        />

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/shape_button"
        android:text="@string/write"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category"
        android:layout_marginTop="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
