<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteRecipeActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/background8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp">

            <Button
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="start"
                />

            <Button
                android:id="@+id/dontLike"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/thumb_down_off_alt"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/countLike"
                android:layout_marginStart="50dp"
                />

            <TextView
                android:id="@+id/countLike"
                style="@style/textStyle"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="@color/white"
                android:text="0"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/dontLike"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/like"
                />

            <Button
                android:id="@+id/like"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/thumb_up_off_alt"
                app:layout_constraintStart_toEndOf="@id/countLike"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/favorite"
                android:layout_gravity="start"
                android:layout_marginEnd="50dp"
                />

            <Button
                android:id="@+id/favorite"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/not_favorites"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <Button
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textSize="18sp"
                android:paddingHorizontal="10dp"
                android:textStyle="bold"
                android:background="@drawable/shape_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/titleText"
            style="@style/textStyleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textStyle="bold"
            android:textColorHint="@color/white"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/nameingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:textStyle="bold"
            android:text="@string/ingredients"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/transparent"
            android:textSize="27sp"
            android:text="@string/loading"
            android:gravity="start|top"
            android:scrollbars="vertical"
            android:lines="8"
            android:maxLines="10"
            android:paddingHorizontal="15dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/namedescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:textStyle="bold"
            android:text="@string/description"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@color/transparent"
            android:textSize="27sp"
            android:text="@string/loading"
            android:gravity="start|top"
            android:scrollbars="vertical"
            android:lines="8"
            android:maxLines="10"
            android:paddingHorizontal="15dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/namecategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:textStyle="bold"
            android:text="@string/category"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            android:text="@string/loading"
            android:paddingHorizontal="15dp"
            style="@style/textStyle"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"
            />

    </LinearLayout>

</ScrollView>